[package]
name = "from-repr-enum-derive"
version = "0.1.0"
authors = ["matthew <matthew.tejo@gmail.com>"]
license = "MIT"
description = "Derive From for an enum with a repr"
repository = "https://github.com/tejom/From-repr-enum-derive"
documentation = "https://github.com/tejom/From-repr-enum-derive"

[dependencies]
quote = "*"

[dependencies.syn]
version = "*"
features = ["extra-traits"]

[lib]
proc-macro = true

